--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         var animalNames = ['🐘 Elephant', '🐯 Tiger', '🐧 Penguin', '🦒 Giraffe', '🦁 Lion', '🦓 Zebra', '🦛 Hippo', '🦘 Kangaroo', '🐨 Koala', '🐼 Panda', '🐻 Bear', '🐸 Frog', '🐵 Monkey', '🐔 Chicken', '🐦 Bird', '🐺 Wolf', '🦊 Fox', '🐴 Horse', '🦄 Unicorn', '🐝 Bee', '🐢 Turtle', '🦋 Butterfly', '🐌 Snail', '🐙 Octopus', '🦀 Crab', '🦉 Owl', '🦅 Eagle', '🦇 Bat', '🐊 Crocodile', '🐍 Snake'];
         var donations = [
             { amount: 2000 },
+            { amount: 501 },
             // Add more donations here
         ];
 
