--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         var donations = [
             { amount: 2000 },
             { amount: 501 },
+            { amount: 500 },
             // Add more donations here
         ];
 
