--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             { amount: 2000 },
             { amount: 501 },
             { amount: 500 },
+            { amount: 500 },
             // Add more donations here
         ];
 
