--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
     <div class="container">
         <h1><i class="fas fa-hand-holding-usd"></i> Fundraiser</h1>
-        <p class="description">Hey there! We’re raising funds for our school get-together. Every little bit helps, and it’s all anonymous. Whether you’re a 🐘 Elephant or a 🐼 Panda, your contribution matters. So, let’s be secret superheroes and make this event happen. Remember, no act of kindness is too small. 😊</p>
+        <p class="description">Hey there! We’re raising funds for our school get-together. Every little bit helps, and it’s all anonymous. Whether you’re an 🐘 Elephant or a 🐼 Panda, your contribution matters. So, let’s be secret superheroes and make this event happen. Remember, no act of kindness is too small. 😊</p>
         <p><i class="fas fa-bullseye"></i> Target Amount: ₹<span id="targetAmount"></span></p>
         <p><i class="fas fa-donate"></i> Donated: ₹<span id="donatedAmount"></span></p>
         <div class="progress-bar">
