--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         @keyframes progress {
             0% { background-position: 0 0; }
-            100% { background-position: 50px 50px; }
+            100% { background-position: 100% 50px; }
         }
         body {
             font-family: Arial, sans-serif;
@@ -98,6 +98,7 @@
             { amount: 501 },
             { amount: 500 },
             { amount: 500 },
+            { amount: 999 },
             // Add more donations here
         ];
 
