--- a/index.html
+++ b/index.html
@@ -37,15 +37,30 @@
             border-radius: 13px;
             overflow: hidden;
             margin-top: 20px;
+            position: relative;
         }
+
         .progress-bar-fill {
             height: 20px;
-            background-color: #4caf50;
             width: 0%;
-            animation: progress 2s ease-out forwards;
             background: linear-gradient(-45deg, #4caf50, #8bc34a, #cddc39, #ffeb3b);
-            background-size: 200% 200%;
+            background-size: 200% 100%;
+            animation: progress 2s ease-out forwards;
         }
+
+        /* Add the progress text */
+        .progress-text {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            text-align: center;
+            font-size: 14px;
+            color: auto;
+        }
+
         .donation-list {
             margin-top: 20px;
         }
@@ -80,8 +95,10 @@
         <p><i class="fas fa-bullseye"></i> Target Amount: ₹<span id="targetAmount"></span></p>
         <p><i class="fas fa-donate"></i> Donated: ₹<span id="donatedAmount"></span></p>
         <div class="progress-bar">
-            <div class="progress-bar-fill" id="progressBar"></div>
-        </div>
+            <div class="progress-bar-fill" id="progressBar">
+            </div>
+            <div class="progress-text"></div>
+        </div>        
         <div class="upi">
             <h2><i class="fas fa-qrcode"></i> Donate with UPI</h2>
             <p>UPI ID: 7982441536@paytm</p>
@@ -99,6 +116,7 @@
             { amount: 500 },
             { amount: 500 },
             { amount: 999 },
+            { amount: 1000 },
             // Add more donations here
         ];
 
@@ -109,6 +127,7 @@
         document.getElementById('targetAmount').textContent = targetAmount;
         document.getElementById('donatedAmount').textContent = donatedAmount;
         document.getElementById('progressBar').style.width = (donatedAmount / targetAmount * 100) + '%';
+        document.getElementsByClassName('progress-text')[0].textContent = Math.round(donatedAmount / targetAmount * 1000) / 10 + '%';
 
         var donationList = document.getElementById('donationList');
         donations.forEach(function (donation, index) {
