--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             { amount: 500 },
             { amount: 999 },
             { amount: 1000 },
+            { amount: 1000 },
             // Add more donations here
         ];
 
