--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             { amount: 999 },
             { amount: 1000 },
             { amount: 1000 },
+            { amount: 1005 },
             // Add more donations here
         ];
 
