--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             { amount: 1000 },
             { amount: 1000 },
             { amount: 1005 },
+            { amount: 1069 },
             // Add more donations here
         ];
 
