--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             { amount: 1000 },
             { amount: 1005 },
             { amount: 1069 },
+            { amount: 501 },
             // Add more donations here
         ];
 
