--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             { amount: 1005 },
             { amount: 1069 },
             { amount: 501 },
+            { amount: 500 },
             // Add more donations here
         ];
 
