--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             { amount: 1069 },
             { amount: 501 },
             { amount: 500 },
+            { amount: 1501 },
             // Add more donations here
         ];
 
