--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             { amount: 501 },
             { amount: 500 },
             { amount: 1501 },
+            { amount: 669 },
             // Add more donations here
         ];
 
