--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <script>
         var targetAmount = 20000; // Update this value as needed
-        var animalNames = ['🐘 Elephant', '🐯 Tiger', '🐧 Penguin', '🦒 Giraffe', '🦁 Lion', '🦓 Zebra', '🦛 Hippo', '🦘 Kangaroo', '🐨 Koala', '🐼 Panda', '🐻 Bear', '🐸 Frog', '🐵 Monkey', '🐆 Cheetah', 🐔 Chicken', '🐺 Wolf', '🦊 Fox', '🐴 Horse', '🦄 Unicorn', '🐝 Bee', '🐢 Turtle', '🦋 Butterfly', '🐌 Snail', '🐙 Octopus', '🦀 Crab', '🦉 Owl', '🦅 Eagle', '🦇 Bat', '🐊 Crocodile', '🐍 Snake'];
+        var animalNames = ['🐘 Elephant', '🐯 Tiger', '🐧 Penguin', '🦒 Giraffe', '🦁 Lion', '🦓 Zebra', '🦛 Hippo', '🦘 Kangaroo', '🐨 Koala', '🐼 Panda', '🐻 Bear', '🐸 Frog', '🐵 Monkey', '🐆 Cheetah', '🐔 Chicken', '🐺 Wolf', '🦊 Fox', '🐴 Horse', '🦄 Unicorn', '🐝 Bee', '🐢 Turtle', '🦋 Butterfly', '🐌 Snail', '🐙 Octopus', '🦀 Crab', '🦉 Owl', '🦅 Eagle', '🦇 Bat', '🐊 Crocodile', '🐍 Snake'];
         var donations = [
             { amount: 2000 },
             { amount: 501 },
