--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             { amount: 1501 },
             { amount: 669 },
             { amount: 800 },
+            { amount: 500 },
             // Add more donations here
         ];
 
