--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             { amount: 669 },
             { amount: 800 },
             { amount: 500 },
+            { amount: 400 },
             // Add more donations here
         ];
 
