--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             { amount: 800 },
             { amount: 500 },
             { amount: 500 },
+            { amount: 501 },
             // Add more donations here
         ];
 
