--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             { amount: 500 },
             { amount: 501 },
             { amount: 1000 },
+            { amount: 1000 },
             // Add more donations here
         ];
 
