--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             { amount: 501 },
             { amount: 1000 },
             { amount: 1000 },
+            { amount: 501 },
             // Add more donations here
         ];
 
