--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             { amount: 1000 },
             { amount: 1000 },
             { amount: 501 },
+            { amount: 500 },
             // Add more donations here
         ];
 
