--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             { amount: 1000 },
             { amount: 501 },
             { amount: 500 },
+            { amount: 500 },
             // Add more donations here
         ];
 
