--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             { amount: 501 },
             { amount: 500 },
             { amount: 500 },
+            { amount: 2500 },
             // Add more donations here
         ];
 
