--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             { amount: 15600, reason: "Catering and Venue - Merakii"},
             { amount: 2100, reason: "Gifts for teachers + Party poppers"},
             { amount: 1005, reason: "Refunded to 🦘 due to absentee"},
-            { amount: 336, reason: "Refundd to 🐸 (Top 3 Donors)"},
-            { amount: 447, reason: "Refundd to 🐘 (Top 3 Donors)"},
-            { amount: 559, reason: "Refundd to 🐌 (Top 3 Donors)"},
+            { amount: 336, reason: "Refunded to 🐸 (Top 3 Donors)"},
+            { amount: 447, reason: "Refunded to 🐘 (Top 3 Donors)"},
+            { amount: 559, reason: "Refunded to 🐌 (Top 3 Donors)"},
         ]
 
         var donatedAmount = donations.reduce(function (total, donation) {
